--- a/wcw/data/wc/loot_tables/projectile_shield.json
+++ b/wcw/data/wc/loot_tables/projectile_shield.json
@@ -1,38 +1,46 @@
 {
-	"pools":[
-		{
-			"rolls": 1,
-			"entries":[
-				{
-				"type":"item",
-				"name":"minecraft:snowball",
-				"functions":[
-				   {
-					  "function":"set_name",
-					  "name":[
-						 {
-							"text":"Projectile Shield",
-							"color":"green","italic":false
-						 }
-					  ]
-				   },
-				   {
-					  "function":"set_lore",
-					  "lore":[
-						 {
-							"text":"Throw to create a glass sheild to block ",
-							"color":"white","italic":false
-						 },
-						 {
-							"text":"incomming projectiles.",
-							"color":"white","italic":false
-						 }
-					  ]
-				   }
+	"pools": [
+	  {
+		"rolls": 1,
+		"entries": [
+		  {
+			"type": "item",
+			"weight": 1,
+			"name": "minecraft:snowball",
+			"functions": [
+			  {
+				"function": "set_count",
+				"count": 1
+			  },
+			  {
+				"function": "set_name",
+				"name": [
+				  {
+					"color": "green",
+					"italic": false,
+					"text": "Projectile Shield"
+				  }
 				]
-			 }
+			  },
+			  {
+				"function": "set_lore",
+				"lore": [
+				  {
+					"color": "white",
+					"italic": false,
+					"text": "Throw to create a glass sheild to block "
+				  },
+				  {
+					"color": "white",
+					"italic": false,
+					"text": "incomming projectiles."
+				  }
+				],
+				"mode": "append"
+			  }
 			]
-		}
+		  }
+		]
+	  }
 	]
-}
-
+  }
